hybrid-commerce-devops/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hybrid-commerce
  labels:
    name: hybrid-commerce
